--- a/examples/roi_pooling3d_minimal_example.ipynb
+++ b/examples/roi_pooling3d_minimal_example.ipynb
@@ -12,7 +12,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -21,24 +21,30 @@
     "import tensorflow as tf\n",
     "import numpy as np\n",
     "\n",
-    "from roi_pooling.roi_pooling_ops import roi_pooling"
+    "from roi_pooling.roi_pooling_ops import roi_pooling_3d"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# 4x4 feature map with only 1 channel\n",
+    "# 4x4x4 feature map with only 1 channel\n",
+    "#input_value = [[\n",
+    "#    [[[1],[1],[1],[1]], [[2],[2],[2],[2]], [[4],[4],[4],[4]], [[4],[4],[4],[4]]],\n",
+    "#    [[[3],[3],[3],[3]], [[4],[4],[4],[4]], [[1],[1],[1],[1]], [[2],[2],[2],[2]]],\n",
+    "#    [[[6],[6],[6],[6]], [[2],[2],[2],[2]], [[1],[1],[1],[1]], [[7],[7],[7],[7]]],\n",
+    "#    [[[1],[1],[1],[1]], [[3],[3],[3],[3]], [[2],[2],[2],[2]], [[8],[8],[8],[8]]]\n",
+    "#]]\n",
+    "\n",
     "input_value = [[\n",
-    "    [[1], [2], [4], [4]],\n",
-    "    [[3], [4], [1], [2]],\n",
-    "    [[6], [2], [1], [7]],\n",
-    "    [[1], [3], [2], [8]]\n",
-    "]]\n",
+    "        [[[0],[1]], [[2],[3]]],\n",
+    "        [[[4],[5]], [[6],[7]]]\n",
+    "    ]]\n",
+    "\n",
     "input_value = np.asarray(input_value, dtype='float32')"
    ]
   },
@@ -46,18 +52,29 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 7)\n"
+     ]
+    }
+   ],
    "source": [
     "# regions of interest as lists of:\n",
     "# feature map index, upper left, bottom right coordinates\n",
-    "rois_value = [\n",
-    "    [0, 0, 0, 1, 3],\n",
-    "    [0, 2, 2, 3, 3],\n",
-    "    [0, 1, 0, 3, 2]\n",
-    "]\n",
+    "#rois_value = [\n",
+    "#    [0, 0, 0, 0, 1, 3, 0],\n",
+    "#    [0, 2, 2, 0, 3, 3, 0],\n",
+    "#    [0, 1, 0, 0, 3, 2, 0]\n",
+    "#]\n",
+    "rois_value = [ [0, 0,0,0, 1,1,1] ]\n",
     "rois_value = np.asarray(rois_value, dtype='int32')\n",
+    "\n",
+    "print(rois_value.shape)\n",
     "\n",
     "# in this case we have 3 RoI pooling operations:\n",
     "# * channel 0, rectangular region (0, 0) to (1, 3)\n",
@@ -89,16 +106,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[[ 3.  4.]\n",
-      "   [ 6.  3.]]]\n",
+      "[[[[[ 0.  1.]\n",
+      "    [ 2.  3.]]\n",
       "\n",
-      "\n",
-      " [[[ 1.  7.]\n",
-      "   [ 2.  8.]]]\n",
-      "\n",
-      "\n",
-      " [[[ 4.  4.]\n",
-      "   [ 4.  7.]]]]\n"
+      "   [[ 4.  5.]\n",
+      "    [ 6.  7.]]]]]\n"
      ]
     }
    ],
@@ -107,7 +119,7 @@
     "rois = tf.placeholder(tf.int32)\n",
     "input_const = tf.constant(input_value, tf.float32)\n",
     "rois_const = tf.constant(rois_value, tf.int32)\n",
-    "y = roi_pooling(input_const, rois_const, pool_height=2, pool_width=2)\n",
+    "y = roi_pooling_3d(input_const, rois_const, pool_height=2, pool_width=2, pool_depth=2)\n",
     "\n",
     "with tf.Session('') as sess:\n",
     "    y_output = sess.run(y, feed_dict={input_featuremap: input_value, rois: rois_value})\n",
